--- a/GridRL/Properties/Resources.resx
+++ b/GridRL/Properties/Resources.resx
@@ -151,6 +151,9 @@
   <data name="Stair_Up" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tiles\Stair_Up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="StartMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StartMenu.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Sword" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Items\Sword.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
